tests/e2e/semantics/time_values_invalid2.error
Error: syntax error in story at line 1, column 5

1|    a = 2m2d
          ^^^^

E0064: Time value inconsistent: `d` must to be before `m`
